--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -30,6 +30,27 @@ jobs:
           command: npm run test:e2e
           start: npm run start-prod
           wait-on: http://localhost:5000
+  deploy:
+    runs-on: ubuntu-18.04
+    env:
+        COMMIT_MESSAGES: ${{ toJson(github.event.commits.*.message) }}
+    #if: ${{ github.event_name == 'push' && !contains(join(COMMIT_MESSAGES), '#skip') }}
+    needs: simple_deployment_pipeline
+    steps:
+      - uses: actions/checkout@v2
+      - name: gihub context
+        env:
+          GITHUB_CONTEXT: ${{ toJson(github) }}
+        run: echo "$GITHUB_CONTEXT"
+      - name: commits
+        env:
+          COMMITS: ${{ toJson(github.event.commits) }}
+        run: echo "$COMMITS"
+      - name: commit messages
+        run: echo "$COMMIT_MESSAGES"
+      - name: skip tag in commit messages
+        run: echo "Skipping due to the skip tag in PR"
+        if: ${{ contains(join(COMMIT_MESSAGES), '#skip') }}
       - uses: akhileshns/heroku-deploy@v3.12.12
         if: ${{ github.event_name == 'push' }}
         with:
