--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -50,6 +50,8 @@ jobs:
         run: echo "$COMMIT_MESSAGES"
       - name: skip tag in commit messages
         run: echo "Skipping due to the skip tag in PR"
+        env:
+          COMMIT_MESSAGES: ${{ toJson(github.event.commits.*.message) }}
         if: ${{ contains(join($COMMIT_MESSAGES), '#skip') }}
       - uses: akhileshns/heroku-deploy@v3.12.12
         if: ${{ github.event_name == 'push' }}
