--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -34,7 +34,7 @@ jobs:
     runs-on: ubuntu-18.04
     env:
         COMMIT_MESSAGES: ${{ toJson(github.event.commits.*.message) }}
-    #if: ${{ github.event_name == 'push' && !contains(join(COMMIT_MESSAGES), '#skip') }}
+    if: ${{ github.event_name == 'push' && !contains(join(COMMIT_MESSAGES), '#skip') }}
     needs: simple_deployment_pipeline
     steps:
       - uses: actions/checkout@v2
