--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -32,9 +32,7 @@ jobs:
           wait-on: http://localhost:5000
   deploy:
     runs-on: ubuntu-18.04
-    env:
-        COMMIT_MESSAGES: ${{ toJson(github.event.commits.*.message) }}
-    if: ${{ github.event_name == 'push' && !contains(join($COMMIT_MESSAGES), '#skip') }}
+    if: ${{ github.event_name == 'push' && !contains(join(${{ toJson(github.event.commits.*.message) }}), '#skip') }}
     needs: simple_deployment_pipeline
     steps:
       - uses: actions/checkout@v2
